# anki-tts

./: .gitignore  README.md  card_types.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/exported/: deck_fr_500.txt
data/processed/: fr_es_words.csv
data/raw/: yohablo.txt
data/to_import/: fr_es_words_anki_import.txt
notebooks/: merge_datasets.ipynb  output.html  price_estimation.ipynb
scripts/: 05_fetch_cambridge_translations_en_es.sh  06_fetch_cambridge_translations_en_ca.sh  07_parse_cambridge_translations_en_fr.sh  08_parse_cambridge_translations_en_es.sh  09_parse_cambridge_translations_en_ca.sh  11_fetch_linguee_words_en_es.sh  14_parse_linguee_translations_en_es.sh  15_parse_cat_translations_en_ca.sh
scripts/anki/: load_mds.sh  load_vocab.sh  store_wsl_ip.sh
scripts/translation/: 00_get_oxford_common_words.sh  01_parse_oxford_common_words.sh  02_merge_parsed_oxford_common_words.sh  04_fetch_cambridge_translations_en_fr.sh  10_fetch_linguee_words_en_fr.sh  12_fetch_diccionaricat_words_en_ca.sh  13_parse_linguee_translations_en_fr.sh  16_clean_data_for_postprocessing.sh  17_generate_jsonl_clean_words.sh  18_upload_batch_clean_words.sh  19_generate_jsonl_translation.sh  20_upload_batch_translation.sh  21_final_word_processing.sh
src/: utils.py
src/anki/: connect.py  domain.py  port.py
src/data/: scrap_01.py
src/manki/: main.py  settings.py  utils.py
src/manki/anki/: domain.py  (+4 more)
test/: conftest.py
test/anki/: connection_test.py  port_test.py  xport_test.py
test/samples/: malformed.md  md.md  translations.json
(+34 files in other folders)
